--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,39 @@
-html{ 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-
-body, #root {
+body,
+#root {
   height: 100vh;
   margin: 0;
+}
+body,
+input,
+select,
+button,
+textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
+  font-size: 1.6rem;
 }
 
 .grid-container {
   display: grid;
-  grid-template-areas: 
-  "header"
-  "main"
-  "footer";
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
   height: 100%;
 }
-
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: #ff8000;
+}
 header {
   grid-area: header;
   background-color: #203040;
@@ -31,11 +46,9 @@ header a {
   color: #ffffff;
   text-decoration: none;
 }
-
 main {
   grid-area: main;
 }
-
 footer {
   grid-area: footer;
   background-color: #203040;
@@ -44,11 +57,65 @@ footer {
   justify-content: center;
   align-items: center;
 }
-a:hover{
-  color: #ff8000;
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main {
+  flex: 3 60rem;
+}
+.sidebar {
+  flex: 1 20rem;
 }
 
-body, input, select, textarea {
-  font-size: 1.6rem;
-  font-family: Helvetica,Arial, sans-serif;
+/* products */
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.products li {
+  flex: 0 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product img {
+  max-width: 37rem;
+  max-height: 37rem;
+}
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-price div,
+.product-price button {
+  text-align: center;
+  flex: 1;
+}
+.product-price div {
+  font-size: 2rem;
+}
+.button {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+.button:hover {
+  border: 0.1rem #808080 solid;
+}
+.button.primary {
+  background-color: #f0c040;
 }
